--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-OPENAI_API_KEY=
-GOOGLE_TTS_KEY=
+# Copy this to .env and fill in your keys
+OPENAI_API_KEY=tu_clave_openai
+GOOGLE_APPLICATION_CREDENTIALS=/ruta/a/tu/google-credentials.json
