--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "dotenv": "^16.0.3",
     "openai": "^4.2.0",
     "@google-cloud/text-to-speech": "^3.0.5",
-    "multer": "^1.4.5-lts.1",
-
+    "multer": "^1.4.5-lts.1"
   }
 }
