--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reservo-backend",
+  "name": "reservo-voice-realtime",
   "version": "1.0.0",
   "main": "backend/app.js",
   "scripts": {
@@ -7,10 +7,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "openai": "^4.2.0",
-    "@google-cloud/text-to-speech": "^3.0.5",
-    "multer": "^1.4.5-lts.1"
+    "ws": "^8.13.0",
+    "openai": "^5.0.0",
+    "dotenv": "^16.0.3"
   }
 }
