--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,1 @@
-# Copy this to .env and fill in your keys
-OPENAI_API_KEY=tu_clave_openai
-GOOGLE_APPLICATION_CREDENTIALS=/ruta/a/tu/google-credentials.json
+OPENAI_API_KEY=sk-...your_key_here
